# enterprise-knowledge-service

./: .dockerignore  .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py
app/core/: config.py  database.py  logging.py  security.py
app/models/: __init__.py  calendar_event.py  chunk.py  document.py  ingest_run.py  ingestion.py  knowledge_base.py  knowledge_base_member.py  message.py  query_log.py  user.py
app/repositories/: chunk_repository.py  document_repository.py  ingest_run_repository.py  ingestion_repository.py  knowledge_base_member_repository.py  knowledge_base_repository.py  query_log_repository.py
app/schemas/: analytics.py  auth.py  calendar.py  document.py  ingestion.py  kb_member.py  knowledge_base.py  message.py  query.py
app/services/: document_service.py  ingestion_service.py  knowledge_base_service.py  openai_service.py  rag_service.py  vector_store_service.py
app/utils/: documents.py  files.py  hashing.py  text.py
docker/: api.Dockerfile
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_auth_messaging.py  0003_user_profile_fields.py  0004_add_is_admin.py  0005_add_calendar_events.py  0006_multi_tenant_telemetry.py  0007_add_query_log_tokens.py  (+2 more)
tests/: conftest.py  test_analytics.py  test_auth.py  test_document_extraction.py  test_documents.py  test_ingestion.py  test_ingestion_idempotent.py  test_knowledge_bases.py  test_members.py  test_messages.py  test_query.py  test_rag_service.py
web/: Dockerfile  index.html  package-lock.json  package.json
(+41 files in other folders)
