[project]
name = "enterprise-knowledge-service"
version = "0.1.0"
description = "Enterprise Knowledge Service (EKS)"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.1",
  "chromadb>=0.5",
  "openai>=1.30",
  "python-multipart>=0.0.9",
  "alembic>=1.13",
  "pypdf>=4.0",
]

[project.optional-dependencies]
 dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
pythonpath = ["."]
